ATF fix, probably too much CSS in the header but here we go

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,22 +44,18 @@ textarea{
 }
 
 #about-me-divider{
-
 	border-bottom: .05em rgb(0, 36, 91) solid;
 	border-top: .05em rgb(0, 36, 91) solid;
 	display: block;
 	margin: auto;
 	padding-bottom: 1.5em;
 	width: 14em;
-
 }
 
 #connect-modal-close-trigger{
-
 	clear: both;
 	padding-right: .5em;
 	text-align: right;
-
 }
 
 .padding-top-5em{
@@ -79,98 +75,69 @@ textarea{
 	top: 2.5em;
 	width: 100%;
 	z-index: 1;
-
 }
 
 #footer-contact-form-container{
 	display: block;
 	margin: auto;
 	width: 80%;
-	
 }
 
 #footer-social-container {
-
 	display: block;
 	margin: auto;
 	width: 80%;
-
 }
 
-#homepage-header{
-
-	background: linear-gradient(180deg, rgb(0, 36, 91), rgb(0, 36, 91), rgb(17, 17, 17), rgb(0, 36, 91), rgb(17, 17, 17), rgb(0, 36, 91), rgb(17, 17, 17), rgb(0, 36, 91), rgb(0, 36, 91));
-	background-size: 1200% 1800%;
-
-	animation: gradient-scroll 10s cubic-bezier(.13,.43,.76,.35) infinite normal forwards;
-	
-	margin-top: 3em;
-	padding: 5em 1em 5em 1em;
-	width: 100%;
-
+.homepageheader-padding{
+margin-top: 3em;
+padding: 5em 1em 5em 1em;
 }
+
 
 #homepage-project-details-modal-footer{
-
 	padding: .5em .5em .5em .5em;
 	position: fixed;
 	bottom: -100%;
-	width: 100%;
 	z-index: 2;
 }
 
 #homepage-project-details-modal-trigger{
-
 	height: 2em;
 }
 
 
 #homepage-project-new-window-trigger{
-
 	float: right;
-	font-family: 'Overpass Mono', monospace;
-
 }
 
 #homepage-projects-iframe{
-
-	width: 100%;
 	height: calc(100vh - 6em);
 	overflow: scroll;
 	top: 0;
 	position: absolute;
-
 }
 
 #homepage-projects-modal{
-
 	height: calc(100vh - 5.5em);
 	bottom: -100%;
 	position: fixed;
-	width: 100%;
 	z-index: 1;
 	overflow:auto;
 	-webkit-overflow-scrolling:touch;
-
-
 }
 
 #homepage-section-highlights{
-
 	display: block;
-
 }
 
-#my-hidden-iframe iframe {
-   
+#my-hidden-iframe iframe {  
    display: none;
    margin: 0 auto; 
    overflow: auto;
-
 }
 
 #navbar-modal{
-
 	height: 100%;
 	left: -110%;
 	position: fixed;
@@ -178,41 +145,23 @@ textarea{
 	overflow-y: auto;
 	width: 100%;
 	z-index: 1;
-
 }
 
 #navbar-modal-close-trigger{
 	padding-left: .5em;
-
 }
 
 #navbar-text-container{
-
 	border-left: .5em solid;
 	padding:.5em 1em 0em .25em;
-
-}
-
-#social-determinants-def{
-
-	background: linear-gradient(180deg, rgb(0, 36, 91), rgb(0, 36, 91), rgb(17, 17, 17), rgb(0, 36, 91), rgb(17, 17, 17), rgb(0, 36, 91), rgb(17, 17, 17), rgb(0, 36, 91), rgb(0, 36, 91));
-	background-size: 1200% 1800%;
-
-	-webkit-animation: gradient-scroll-reverse 10s cubic-bezier(.13,.43,.76,.35) infinite normal forwards;
-	-moz-animation: gradient-scroll-reverse 10s cubic-bezier(.13,.43,.76,.35) infinite normal forwards;
-	-o-animation: gradient-scroll-reverse 10s cubic-bezier(.13,.43,.76,.35) infinite normal forwards;
-	animation: gradient-scroll-reverse 10s cubic-bezier(.13,.43,.76,.35) infinite normal forwards;
-
 }
 
 #sticky-header{
-
 	padding: 1em .15em 1em .15em;
 	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 2;
-
 }
 
 .border-none{
@@ -220,78 +169,58 @@ textarea{
 }
 
 .JS-link:hover{
-
 	color: rgb(0, 72, 182);
 	text-decoration: underline;	
-
 }
 
 .display-none{
-
 	display: none;
 }
 
 .embed-container{
-
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
 	padding-top: 25px;
 	width: 60%;
-
 }
 
 .embed-container iframe, .embed-container object, .embed-container embed {
-
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-
 }
 
 .footer-social-icon {
-	
 	display: block;
 	margin: auto;
-	width: 100%;
-	
+	width: 100%;	
 }
 
 .footer-social-icon-container {
-	
 	padding: .5em .5em .5em .5em;
 	width: 25%;
-	
 }
 
 .footer-social-icon-label{
-
 	font-size: .50em;
 	font-weight: 400;
-
 }
 
 
 .homepage-project-container {
-
 	width: 100%;
 	padding: 0em 0em 1em 0em;
-
 }
 
 .homepage-goals-header{
-	
 		padding: 3.5em 0em 1em 0em;
-		text-align: center;
-	
 }
 
 .homepage-highlight-project-container{
-
 	width: 100%;
 	padding: 0em 0em 1em 0em;
-
 }
 
 .homepage-highlight-project-icon{
@@ -305,17 +234,13 @@ textarea{
 
 .homepage-project-description{
 
-	border-left: 1em double;
-	color: inherit;
-	padding: 0em 1em 0em 2em;
-	text-align: left;
+	padding: 1em 1em 1em 1em;
 	
-
 }
 
 .homepage-project-description-title{
 
-	padding-bottom: .5em;
+	border-left: 1em double;
 
 }
 
@@ -369,27 +294,8 @@ textarea{
 
 }
 
-
-
-@keyframes gradient-scroll { 
-    0%{background-position:50% 0%}
-    100%{background-position:50% 100%}
-}
-
-
-@keyframes gradient-scroll-reverse { 
-    0%{background-position:50% 100%}
-    100%{background-position:50% 0%}
-}
-
 @media only screen and (min-width : 620px){
-	#connect-footer-modal{
-		width: 66%;
-	}
 
-	#navbar-modal{
-		width: 50%;
-	}
 
 	.homepage-section{
 		clear: both;
@@ -428,24 +334,10 @@ textarea{
 		
 	}
 
-	.homepage-project-description{
-			border: none;
-			color: inherit;
-			padding: 0em 1em 0em 1em;
-			text-align: left;
-		
-	}
 }
 
 @media only screen and (min-width : 764px){
 	
-		#connect-footer-modal{
-			width: 66%;
-		}
-
-		#navbar-modal{
-			width: 50%;
-		}
 
 		.homepage-section{
 			clear: both;
@@ -468,16 +360,10 @@ textarea{
 			
 		}
 
-		.homepage-project-description{
-			padding: 0em .4em 0em .4em;
-			text-align: left;
-		
-		}
 
 		.homepage-project-description-title{
 			
 			border-left: 1em double;
-			padding: 0em .4em 0em .4em;
 			margin-bottom: .5em;
 	
 		}
